test: 50% bill + projection showtime